--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
+@theme {
+  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica,
+    "ヒラギノ角ゴ Pro W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", Arial,
+    sans-serif;
+  --font-mono: SFMono-Medium, "SF Mono", "Segoe UI Mono", "Roboto Mono",
+    "Ubuntu Mono", Menlo, Consolas, Courier, monospace;
+}
+
 ::selection {
   background-color: #47a3f3;
   color: #fefefe;
